feat: add different test script for dev environment

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prepare": "dts build",
     "size": "size-limit",
     "start": "dts watch",
-    "test": "dts test --watch"
+    "test": "dts test",
+    "test:dev": "dts test --watch"
   },
   "husky": {
     "hooks": {
