--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "size": "size-limit",
     "start": "dts watch",
     "test": "dts test",
-    "test:dev": "dts test --watch"
+    "test:dev": "dts test --watch --verbose"
   },
   "husky": {
     "hooks": {
